# conjugate-gradient

./: .gitignore  Manifest.toml  Project.toml  README.md  readme.md  run_job.bash  scaling.md  tasks.md
figs/: C++-x86-64 gcc 14.2-1.asm  device-query-output.txt  scaling.cpp
src/: CMakeLists.txt  common.h  conjugate-gradient_cpu.c  conjugate-gradient_cpu.cu  conjugate-gradient_cpu.h  conjugate-gradient_gpu.cu  conjugate-gradient_gpu.cuh  custom_pdep.cpp  debug  debug.cpp  dynamic_shared.cu  fastindex.c  fastindex.cpp  gpu_utils.cu  gpu_utils.cuh  gram-schmitt.cu  interleave.cuh  julia.cu  laplace-x.cu  laplace-x.h  linear-equations.c  main.c  main.cu  main.jl  preconditioner_gpu.cu  preconditioner_gpu.h  test.jl  tests.cu  utils_gpu.h
src/gsl_examples/: blas_matrix_multiplication.c  linear-equations.c  sparse-linalg.c
src/include/: conjugate-gradient_cpu.h
src/julia/: Manifest.toml  Project.toml  ccall.jl  compile.bash  example.c  stencil.jl
src/var/: interleave.c
